# spdm-rs

./: .gitmodules  Cargo.toml
spdm-x509-rs/: .gitignore  CONTRIBUTING.md  Cargo.toml  SPDM_TESTING_QUICK.md  validate_spdm.sh  verify_cert.sh
spdm-x509-rs/.github/workflows/: ci.yml
spdm-x509-rs/examples/: README.md  SPDM_TESTING.md  USAGE.md  bundle_lion_threelevel.der  bundle_lion_twolevel.der  cert.txt  cert_00  cert_01  cert_normal.txt  cert_verbose.txt  cert_verify.rs  debug_parse.rs  human.cett  library_usage.rs  test_cert.der  usage_example.rs  validate_cert.rs  validate_real_cert.rs  validate_spdm_cert.rs
spdm-x509-rs/specification/: x509_spec_extracted.txt
spdm-x509-rs/src/: algorithms.rs  certificate.rs  error.rs  extensions.rs  lib.rs  name.rs  time_utils.rs  validator.rs
spdm-x509-rs/src/spdm/: algorithm_verification.rs  chain.rs  mod.rs  oids.rs  validator.rs
spdm-x509-rs/tests/: README.md  algorithm_tests.rs  chain_tests.rs  libspdm_compatibility_tests.rs  real_cert_tests.rs  spdm_validation_tests.rs  spdmlib_integration_tests.rs
spdm-x509-rs/tests/data/: README.md
spdm-x509-rs/tests/test_data/: README.md  mod.rs
spdmlib/: Cargo.toml
spdmlib/src/crypto/: mod.rs
spdmlib/src/crypto/spdm_ring/: asym_verify_impl.rs  cert_operation_impl.rs
spdmlib/src/crypto/spdm_x509/: Cargo.toml
spdmlib/src/crypto/spdm_x509/src/: certificate.rs  error.rs  extensions.rs  lib.rs  name.rs  time_utils.rs  validator.rs
spdmlib/src/crypto/spdm_x509/src/algorithms/: mbedtls.rs  mod.rs  ring.rs
spdmlib/src/crypto/spdm_x509/src/certificate/: name.rs
spdmlib/src/crypto/spdm_x509/src/crypto_backend/: mod.rs  ring.rs
spdmlib/src/crypto/spdm_x509/src/spdm/: algorithm_verification.rs  chain.rs  mod.rs  oids.rs  validator.rs
spdmlib/src/crypto/spdm_x509/src/x509/: chain.rs  extensions.rs  mod.rs  signature.rs  spdm_validator.rs  validator.rs
spdmlib/src/crypto/spdm_x509/tests/: README.md  chain_validation.rs  extensions.rs  signatures.rs  spdm_cert_chain.rs  web_certs.rs  webpki_data.rs  x509_limbo.rs
spdmlib/src/crypto/spdm_x509/tests/common/: mod.rs
